--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </div>
 
-    <span class="btn btn-success NAME">Emma</span>
+    <span class="NAME"></span>
 </center>
 <div class="copy_right_footer">
   Developed by: Emma Remon
